Package_Tools/pas_units/glib2/old/gapplication.h

#define G_TYPE_APPLICATION                                  (g_application_get_type ())
#define G_APPLICATION(inst)                                 (G_TYPE_CHECK_INSTANCE_CAST ((inst),                     \
                                                             G_TYPE_APPLICATION, GApplication))
#define G_APPLICATION_CLASS(class)                          (G_TYPE_CHECK_CLASS_CAST ((class),                       \
                                                             G_TYPE_APPLICATION, GApplicationClass))
#define G_IS_APPLICATION(inst)                              (G_TYPE_CHECK_INSTANCE_TYPE ((inst), G_TYPE_APPLICATION))
#define G_IS_APPLICATION_CLASS(class)                       (G_TYPE_CHECK_CLASS_TYPE ((class), G_TYPE_APPLICATION))
#define G_APPLICATION_GET_CLASS(inst)                       (G_TYPE_INSTANCE_GET_CLASS ((inst),                      \
                                                             G_TYPE_APPLICATION, GApplicationClass))
typedef struct _GApplicationClass                           GApplicationClass;
GType                   g_application_get_type                          (void);
gboolean                g_application_id_is_valid                       (const gchar              *application_id);
GApplication *          g_application_new                               (const gchar              *application_id,
                                                                         GApplicationFlags         flags);
const gchar *           g_application_get_application_id                (GApplication             *application);
void                    g_application_set_application_id                (GApplication             *application,
                                                                         const gchar              *application_id);
const gchar *           g_application_get_version                       (GApplication             *application);
void                    g_application_set_version                       (GApplication             *application,
                                                                         const gchar              *version);
GDBusConnection *       g_application_get_dbus_connection               (GApplication             *application);
const gchar *           g_application_get_dbus_object_path              (GApplication             *application);
guint                   g_application_get_inactivity_timeout            (GApplication             *application);
void                    g_application_set_inactivity_timeout            (GApplication             *application,
                                                                         guint                     inactivity_timeout);
GApplicationFlags       g_application_get_flags                         (GApplication             *application);
void                    g_application_set_flags                         (GApplication             *application,
                                                                         GApplicationFlags         flags);
const gchar *           g_application_get_resource_base_path            (GApplication             *application);
void                    g_application_set_resource_base_path            (GApplication             *application,
                                                                         const gchar              *resource_path);
void                    g_application_set_action_group                  (GApplication             *application,
                                                                         GActionGroup             *action_group);
void                    g_application_add_main_option_entries           (GApplication             *application,
                                                                         const GOptionEntry       *entries);
void                    g_application_add_main_option                   (GApplication             *application,
                                                                         const char               *long_name,
                                                                         char                      short_name,
                                                                         GOptionFlags              flags,
                                                                         GOptionArg                arg,
                                                                         const char               *description,
                                                                         const char               *arg_description);
void                    g_application_add_option_group                  (GApplication             *application,
                                                                         GOptionGroup             *group);
void                    g_application_set_option_context_parameter_string (GApplication             *application,
                                                                           const gchar              *parameter_string);
void                    g_application_set_option_context_summary        (GApplication             *application,
                                                                         const gchar              *summary);
void                    g_application_set_option_context_description    (GApplication             *application,
                                                                         const gchar              *description);
gboolean                g_application_get_is_registered                 (GApplication             *application);
gboolean                g_application_get_is_remote                     (GApplication             *application);
gboolean                g_application_register                          (GApplication             *application,
                                                                         GCancellable             *cancellable,
                                                                         GError                  **error);
void                    g_application_hold                              (GApplication             *application);
void                    g_application_release                           (GApplication             *application);
void                    g_application_activate                          (GApplication             *application);
void                    g_application_open                              (GApplication             *application,
                                                                         GFile                   **files,
                                                                         gint                      n_files,
                                                                         const gchar              *hint);
int                     g_application_run                               (GApplication             *application,
                                                                         int                       argc,
                                                                         char                    **argv);
void                    g_application_quit                              (GApplication             *application);
GApplication *          g_application_get_default                       (void);
void                    g_application_set_default                       (GApplication             *application);
void                    g_application_mark_busy                         (GApplication             *application);
void                    g_application_unmark_busy                       (GApplication             *application);
gboolean                g_application_get_is_busy                       (GApplication             *application);
void                    g_application_send_notification                 (GApplication             *application,
                                                                         const gchar              *id,
                                                                         GNotification            *notification);
void                    g_application_withdraw_notification             (GApplication             *application,
                                                                         const gchar              *id);
void                    g_application_bind_busy_property                (GApplication             *application,
                                                                         gpointer                  object,
                                                                         const gchar              *property);
void                    g_application_unbind_busy_property              (GApplication             *application,
                                                                         gpointer                  object,
                                                                         const gchar              *property);